web items grid started

--- a/WebFrontEnd/src/style.css
+++ b/WebFrontEnd/src/style.css
@@ -23,3 +23,8 @@
     --borderRadiusSmall: 6px;
     --borderRadiusBig: var(--pageMargin);
 }
+
+body {
+    background-color: var(--backGroundColor);
+    color: white;
+}
