--- a/WebFrontEnd/src/pages/Home/style.css
+++ b/WebFrontEnd/src/pages/Home/style.css
@@ -1,3 +1,9 @@
 .pageContainer {
- margin: 0 var(--pageMargin);
+    margin: 0 var(--pageMargin);
+}
+
+.info__grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: var(--defaultMargin);
 }
