--- a/WebFrontEnd/src/components/ItemSection/style.css
+++ b/WebFrontEnd/src/components/ItemSection/style.css
@@ -10,20 +10,21 @@
     margin: var(--defaultMargin) 0;
     display: flex;
     flex-direction: row;
+    align-items: center;
     justify-content: space-between;
 }
 .itemSectionTitle h2 {
     margin-bottom: 0.2em;
 }
 
-.clickableTitle{
+.title--hover{
     transition: 0.2s ease;
     display: block;
     width: fit-content;
     cursor: pointer;
 }
 
-.clickableTitle:hover {
+.title--hover:hover {
     transform: scale(1.1);
 }
 .itemSectionTitle img{
