--- a/WebFrontEnd/src/style.css
+++ b/WebFrontEnd/src/style.css
@@ -44,3 +44,12 @@ h3{
 p{
     font-size: var(--fontSize-regular);
 }
+.image-cont--hover img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: 0.3s ease;
+}
+.image-cont--hover img:hover{
+    transform: scale(1.1);
+}
