--- a/WebFrontEnd/src/components/Blob/style.css
+++ b/WebFrontEnd/src/components/Blob/style.css
@@ -2,21 +2,26 @@
     /* background-color: pink; */
     min-height: 25em;
     position: relative;
-    margin: 0 var(--pageMargin);
+    margin: 0 calc(var(--pageMargin) * 0.5);
+    background-color: var(--backGroundColorTwo);
+    padding: 0 5em;
+    margin-top: 4rem;
+    border-bottom-left-radius: var(--borderRadiusBig);
+    border-bottom-right-radius: var(--borderRadiusBig);
 }
 
 .blob__background {
-    width: 120%;
+    width: 100%;
     position: absolute;
-    top: -3em;
+    top: 0;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translate(-50%, -100%);
     z-index: 10;
     /* height: 100%; */
 }
 
 .blob__children-cont {
-    padding: 1em 0;
+    margin-top: -2em;
     position: relative;
     z-index: 20;
 }
