--- a/WebFrontEnd/src/components/Search/style.css
+++ b/WebFrontEnd/src/components/Search/style.css
@@ -4,8 +4,7 @@
     --verticalMargin: 6px;
 
     width: 100%;
-    margin-top: var(--defaultMargin);
-    margin-bottom: var(--defaultMargin);
+    margin: calc(var(--defaultMargin) * 0.5) 0;
 
 }
 
