--- a/WebFrontEnd/src/components/ItemSection/style.css
+++ b/WebFrontEnd/src/components/ItemSection/style.css
@@ -4,11 +4,20 @@
     flex-wrap: wrap;
     justify-content: space-between;
     row-gap: calc(var(--defaultMargin)*2); */
+    height: 85%;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(17em, 1fr));
     gap: 1em;
     row-gap: 2em;
 }
+
+.itemSectionContainer.small {
+    grid-template-columns: repeat(2, minmax(4em, 1fr));
+    grid-template-rows: repeat(2, 1fr);
+    gap: 2em;
+}
+
+
 
 .itemSectionHeader {
     margin: var(--defaultMargin) 0;
@@ -20,17 +29,6 @@
 
 .itemSectionTitle h2 {
     margin-bottom: 0.2em;
-}
-
-.title--hover {
-    transition: 0.2s ease;
-    display: block;
-    width: fit-content;
-    cursor: pointer;
-}
-
-.title--hover:hover {
-    transform: scale(1.1);
 }
 
 .itemSectionTitle img {
