--- a/WebFrontEnd/src/components/QuantitySelector/style.css
+++ b/WebFrontEnd/src/components/QuantitySelector/style.css
@@ -23,6 +23,7 @@ input[type=number]::-webkit-outer-spin-button {
     outline: none;
     box-shadow: none;
     padding-right: 0.2em;
+    font-size: 1em;
 }
 .quantity-selector p, input{
     width: 3em;
@@ -35,13 +36,15 @@ input[type=number]::-webkit-outer-spin-button {
     justify-content: center;
 }
 
-.quantity-selector--number-input{
-
+.quantity-selector p{
+    cursor: default;
 }
 
 .quantity-selector--separator img {
     height: 2em;
     width: 2px;
+    user-select: none;
+
 }
 .quantity-selector--button{
     display: flex;
