--- a/WebFrontEnd/src/components/CategoryCard/style.css
+++ b/WebFrontEnd/src/components/CategoryCard/style.css
@@ -4,14 +4,19 @@
 }
 
 .category-card__inner {
-    height: 13em;
-    width: 13em;
+    width: 100%;
+    height: 100%;
     overflow: hidden;
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: var(--borderRadiusSmall);
+}
+
+.category-card__inner.square {
+    height: auto;
+    aspect-ratio: 1/1;
 }
 
 .category-card img {
@@ -23,7 +28,7 @@
     object-fit: cover;
 }
 
-.category-card__image-cont::after{
+.category-card__image-cont::after {
     content: '';
     display: block;
     position: absolute;
@@ -31,12 +36,13 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0, 0, 0, 0.5);
     pointer-events: none;
     transition: 0.2s ease;
 }
-.category-card__image-cont:hover.category-card__image-cont::after{
-    background-color: rgba(0,0,0,0.75);
+
+.category-card__image-cont:hover.category-card__image-cont::after {
+    background-color: rgba(0, 0, 0, 0.75);
 }
 
 .category-card h3 {
