supra and subcategories query from cache implemented, breadcrums done

--- a/WebFrontEnd/src/style.css
+++ b/WebFrontEnd/src/style.css
@@ -8,6 +8,7 @@
 
     /* Font */
     font-family: "Inter";
+    --fontSize-small: 0.833rem ;
     --fontSize-regular: 1rem;
     --fontSize-medium: 1.25rem;
     --fontSize-large: 1.563rem;
