--- a/WebFrontEnd/src/components/ImageSlider/style.css
+++ b/WebFrontEnd/src/components/ImageSlider/style.css
@@ -3,11 +3,13 @@
     align-items: center;
     gap: 1rem;
 
+
 }
 
 .slider__item {
-    min-width: 10rem;
-    min-height: 10rem;
+    min-width: 5rem;
+    min-height: 5rem;
+    width: 10rem;
     padding: calc(var(--defaultMargin) / 2);
     cursor: pointer;
     transition: 0.2s ease;
@@ -31,4 +33,17 @@
 .slider__carousel {
     cursor: grab;
     overflow: hidden;
+    width: 100%;
+}
+
+.slider-image-view {
+    width: 100%;
+    height: 32rem;
+}
+
+.slider-image-view img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: var(--borderRadiusSmall);
 }
