--- a/WebFrontEnd/src/style.css
+++ b/WebFrontEnd/src/style.css
@@ -8,7 +8,7 @@
 
     /* Font */
     font-family: "Inter";
-    --fontSize-small: 0.833rem ;
+    --fontSize-small: 0.833rem;
     --fontSize-regular: 1rem;
     --fontSize-medium: 1.25rem;
     --fontSize-large: 1.563rem;
@@ -91,4 +91,8 @@ p {
 
 .slide__arrow.disabled {
     opacity: 0.1;
+}
+
+.page {
+    overflow: hidden;
 }
