fixed a minor bug on product page with user selection

--- a/WebFrontEnd/src/components/Button/style.css
+++ b/WebFrontEnd/src/components/Button/style.css
@@ -7,6 +7,7 @@
     outline: none;
     background-color: transparent;
     font-weight: bold;
+    user-select: none;
 
     background-image: url('');
     background-repeat: repeat-x;
