refactored all naming of the item to product in the whole project

--- a/WebFrontEnd/src/components/Heading/style.css
+++ b/WebFrontEnd/src/components/Heading/style.css
@@ -1,7 +1,8 @@
-.itemSectionTitle h2 {
+.itemSectiontionTitle h2 {
     margin-bottom: 0.2em;
 }
-.itemSectionTitle img{
+
+.itemSectiontionTitle img {
     height: 1em;
     margin-left: calc(var(--defaultMargin)/-2);
 }
