--- a/WebFrontEnd/src/components/Heading/style.css
+++ b/WebFrontEnd/src/components/Heading/style.css
@@ -1,8 +1,8 @@
-.itemSectiontionTitle h2 {
+.itemSectionTitle h2 {
     margin-bottom: 0.2em;
 }
 
-.itemSectiontionTitle img {
+.itemSectionTitle img {
     height: 1em;
     margin-left: calc(var(--defaultMargin)/-2);
 }
