--- a/WebFrontEnd/src/pages/Products/style.css
+++ b/WebFrontEnd/src/pages/Products/style.css
@@ -8,5 +8,6 @@
 }
 
 .products__breadcrumbs {
-    margin-bottom: calc(var(--defaultMargin) * 3)
+    margin-bottom: calc(var(--defaultMargin) * 3);
+    min-height: 3rem;
 }
