--- a/WebFrontEnd/src/components/ImageSlider/style.css
+++ b/WebFrontEnd/src/components/ImageSlider/style.css
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     gap: 1rem;
+    height: 10em;
 
 
 }
@@ -13,6 +14,7 @@
     padding: calc(var(--defaultMargin) / 2);
     cursor: pointer;
     transition: 0.2s ease;
+    box-sizing: content-box;
 }
 
 .slider__item:hover {
