--- a/WebFrontEnd/src/components/SlideShow/style.css
+++ b/WebFrontEnd/src/components/SlideShow/style.css
@@ -114,3 +114,10 @@
     transform: scale(1.2);
 
 }
+
+@media only screen and (max-width: 425px) {
+
+    .slideshow {
+        display: none;
+    }
+}
