--- a/WebFrontEnd/src/style.css
+++ b/WebFrontEnd/src/style.css
@@ -104,5 +104,6 @@ p {
 @media only screen and (max-width: 768px) {
     *, :root {
         --pageMargin: 5vw;
+        --defaultMargin: 20px;
     }
 }
