fixed mobile res info section

--- a/WebFrontEnd/src/components/InfoSection/style.css
+++ b/WebFrontEnd/src/components/InfoSection/style.css
@@ -50,7 +50,8 @@
     }
 
     .info__grid .itemSectionContainer {
-        height: 110%;  
+        height: unset;
+
     }
 
     .itemSectionContainer.small {
