--- a/WebFrontEnd/src/components/Breadcrumbs/style.css
+++ b/WebFrontEnd/src/components/Breadcrumbs/style.css
@@ -3,6 +3,7 @@
     color: var(--colorInput);
     font-size: var(--fontSize-small);
 }
+
 .breadcrumbs a {
     color: inherit;
     text-decoration: none;
@@ -13,7 +14,9 @@
     -webkit-text-decoration-skip: objects;
 }
 
-.breadcrumbs a:hover, a:active, a:focus {
+.breadcrumbs a:hover,
+a:active,
+a:focus {
     color: var(--colorPrimary);
     text-decoration: none;
 }
