--- a/WebFrontEnd/src/pages/Products/style.css
+++ b/WebFrontEnd/src/pages/Products/style.css
@@ -11,3 +11,10 @@
     margin-bottom: calc(var(--defaultMargin) * 3);
     min-height: 3rem;
 }
+
+@media only screen and (max-width: 768px) {
+    .products__breadcrumbs {
+        margin-bottom: 0;
+        min-height: unset;
+    }
+}
